src/qt/libqvariant.bf

extension CQt
{
	[LinkName("QVariant_new")]
	public static extern void* QVariant_new();
	[LinkName("QVariant_new2")]
	public static extern void* QVariant_new2(void typeVal);
	[LinkName("QVariant_new3")]
	public static extern void* QVariant_new3(void* other);
	[LinkName("QVariant_new4")]
	public static extern void* QVariant_new4(int32 i);
	[LinkName("QVariant_new5")]
	public static extern void* QVariant_new5(uint32 ui);
	[LinkName("QVariant_new6")]
	public static extern void* QVariant_new6(int64 ll);
	[LinkName("QVariant_new7")]
	public static extern void* QVariant_new7(uint64 ull);
	[LinkName("QVariant_new8")]
	public static extern void* QVariant_new8(bool b);
	[LinkName("QVariant_new9")]
	public static extern void* QVariant_new9(double d);
	[LinkName("QVariant_new10")]
	public static extern void* QVariant_new10(float f);
	[LinkName("QVariant_new11")]
	public static extern void* QVariant_new11(char8* str);
	[LinkName("QVariant_new12")]
	public static extern void* QVariant_new12(libqt_string bytearray);
	[LinkName("QVariant_new13")]
	public static extern void* QVariant_new13(void* bitarray);
	[LinkName("QVariant_new14")]
	public static extern void* QVariant_new14(libqt_string stringVal);
	[LinkName("QVariant_new15")]
	public static extern void* QVariant_new15(libqt_string[] stringlist);
	[LinkName("QVariant_new16")]
	public static extern void* QVariant_new16(void qchar);
	[LinkName("QVariant_new17")]
	public static extern void* QVariant_new17(void date);
	[LinkName("QVariant_new18")]
	public static extern void* QVariant_new18(void time);
	[LinkName("QVariant_new19")]
	public static extern void* QVariant_new19(void* datetime);
	[LinkName("QVariant_new20")]
	public static extern void* QVariant_new20(void* mapVal);
	[LinkName("QVariant_new21")]
	public static extern void* QVariant_new21(void* hash);
	[LinkName("QVariant_new22")]
	public static extern void* QVariant_new22(void* size);
	[LinkName("QVariant_new23")]
	public static extern void* QVariant_new23(void* size);
	[LinkName("QVariant_new24")]
	public static extern void* QVariant_new24(void* pt);
	[LinkName("QVariant_new25")]
	public static extern void* QVariant_new25(void* pt);
	[LinkName("QVariant_new26")]
	public static extern void* QVariant_new26(void* line);
	[LinkName("QVariant_new27")]
	public static extern void* QVariant_new27(void* line);
	[LinkName("QVariant_new28")]
	public static extern void* QVariant_new28(void* rect);
	[LinkName("QVariant_new29")]
	public static extern void* QVariant_new29(void* rect);
	[LinkName("QVariant_new30")]
	public static extern void* QVariant_new30(void* locale);
	[LinkName("QVariant_new31")]
	public static extern void* QVariant_new31(void* re);
	[LinkName("QVariant_new32")]
	public static extern void* QVariant_new32(void* easing);
	[LinkName("QVariant_new33")]
	public static extern void* QVariant_new33(void* uuid);
	[LinkName("QVariant_new34")]
	public static extern void* QVariant_new34(void* url);
	[LinkName("QVariant_new35")]
	public static extern void* QVariant_new35(void* jsonValue);
	[LinkName("QVariant_new36")]
	public static extern void* QVariant_new36(void* jsonObject);
	[LinkName("QVariant_new37")]
	public static extern void* QVariant_new37(void* jsonArray);
	[LinkName("QVariant_new38")]
	public static extern void* QVariant_new38(void* jsonDocument);
	[LinkName("QVariant_new39")]
	public static extern void* QVariant_new39(void* modelIndex);
	[LinkName("QVariant_new40")]
	public static extern void* QVariant_new40(void* modelIndex);
	[LinkName("QVariant_new41")]
	public static extern void* QVariant_new41(int64 typeVal);
	[LinkName("QVariant_new42")]
	public static extern void* QVariant_new42(void typeVal, void* copyVal);
	[LinkName("QVariant_OperatorAssign")]
	public static extern void QVariant_OperatorAssign(void* c_this, void* other);
	[LinkName("QVariant_Swap")]
	public static extern void QVariant_Swap(void* c_this, void* other);
	[LinkName("QVariant_UserType")]
	public static extern int32 QVariant_UserType(void* c_this);
	[LinkName("QVariant_TypeId")]
	public static extern int32 QVariant_TypeId(void* c_this);
	[LinkName("QVariant_TypeName")]
	public static extern char8* QVariant_TypeName(void* c_this);
	[LinkName("QVariant_MetaType")]
	public static extern void QVariant_MetaType(void* c_this);
	[LinkName("QVariant_CanConvert")]
	public static extern bool QVariant_CanConvert(void* c_this, void targetType);
	[LinkName("QVariant_Convert")]
	public static extern bool QVariant_Convert(void* c_this, void typeVal);
	[LinkName("QVariant_CanView")]
	public static extern bool QVariant_CanView(void* c_this, void targetType);
	[LinkName("QVariant_CanConvertWithTargetTypeId")]
	public static extern bool QVariant_CanConvertWithTargetTypeId(void* c_this, int32 targetTypeId);
	[LinkName("QVariant_ConvertWithTargetTypeId")]
	public static extern bool QVariant_ConvertWithTargetTypeId(void* c_this, int32 targetTypeId);
	[LinkName("QVariant_IsValid")]
	public static extern bool QVariant_IsValid(void* c_this);
	[LinkName("QVariant_IsNull")]
	public static extern bool QVariant_IsNull(void* c_this);
	[LinkName("QVariant_Clear")]
	public static extern void QVariant_Clear(void* c_this);
	[LinkName("QVariant_Detach")]
	public static extern void QVariant_Detach(void* c_this);
	[LinkName("QVariant_IsDetached")]
	public static extern bool QVariant_IsDetached(void* c_this);
	[LinkName("QVariant_ToInt")]
	public static extern int32 QVariant_ToInt(void* c_this);
	[LinkName("QVariant_ToUInt")]
	public static extern uint32 QVariant_ToUInt(void* c_this);
	[LinkName("QVariant_ToLongLong")]
	public static extern int64 QVariant_ToLongLong(void* c_this);
	[LinkName("QVariant_ToULongLong")]
	public static extern uint64 QVariant_ToULongLong(void* c_this);
	[LinkName("QVariant_ToBool")]
	public static extern bool QVariant_ToBool(void* c_this);
	[LinkName("QVariant_ToDouble")]
	public static extern double QVariant_ToDouble(void* c_this);
	[LinkName("QVariant_ToFloat")]
	public static extern float QVariant_ToFloat(void* c_this);
	[LinkName("QVariant_ToReal")]
	public static extern double QVariant_ToReal(void* c_this);
	[LinkName("QVariant_ToByteArray")]
	public static extern libqt_string QVariant_ToByteArray(void* c_this);
	[LinkName("QVariant_ToBitArray")]
	public static extern void QVariant_ToBitArray(void* c_this);
	[LinkName("QVariant_ToString")]
	public static extern libqt_string QVariant_ToString(void* c_this);
	[LinkName("QVariant_ToStringList")]
	public static extern libqt_string[] QVariant_ToStringList(void* c_this);
	[LinkName("QVariant_ToChar")]
	public static extern void QVariant_ToChar(void* c_this);
	[LinkName("QVariant_ToDate")]
	public static extern void QVariant_ToDate(void* c_this);
	[LinkName("QVariant_ToTime")]
	public static extern void QVariant_ToTime(void* c_this);
	[LinkName("QVariant_ToDateTime")]
	public static extern void QVariant_ToDateTime(void* c_this);
	[LinkName("QVariant_ToMap")]
	public static extern void* QVariant_ToMap(void* c_this);
	[LinkName("QVariant_ToHash")]
	public static extern void* QVariant_ToHash(void* c_this);
	[LinkName("QVariant_ToPoint")]
	public static extern void QVariant_ToPoint(void* c_this);
	[LinkName("QVariant_ToPointF")]
	public static extern void QVariant_ToPointF(void* c_this);
	[LinkName("QVariant_ToRect")]
	public static extern void QVariant_ToRect(void* c_this);
	[LinkName("QVariant_ToSize")]
	public static extern void QVariant_ToSize(void* c_this);
	[LinkName("QVariant_ToSizeF")]
	public static extern void QVariant_ToSizeF(void* c_this);
	[LinkName("QVariant_ToLine")]
	public static extern void QVariant_ToLine(void* c_this);
	[LinkName("QVariant_ToLineF")]
	public static extern void QVariant_ToLineF(void* c_this);
	[LinkName("QVariant_ToRectF")]
	public static extern void QVariant_ToRectF(void* c_this);
	[LinkName("QVariant_ToLocale")]
	public static extern void QVariant_ToLocale(void* c_this);
	[LinkName("QVariant_ToRegularExpression")]
	public static extern void QVariant_ToRegularExpression(void* c_this);
	[LinkName("QVariant_ToEasingCurve")]
	public static extern void QVariant_ToEasingCurve(void* c_this);
	[LinkName("QVariant_ToUuid")]
	public static extern void QVariant_ToUuid(void* c_this);
	[LinkName("QVariant_ToUrl")]
	public static extern void QVariant_ToUrl(void* c_this);
	[LinkName("QVariant_ToJsonValue")]
	public static extern void QVariant_ToJsonValue(void* c_this);
	[LinkName("QVariant_ToJsonObject")]
	public static extern void QVariant_ToJsonObject(void* c_this);
	[LinkName("QVariant_ToJsonArray")]
	public static extern void QVariant_ToJsonArray(void* c_this);
	[LinkName("QVariant_ToJsonDocument")]
	public static extern void QVariant_ToJsonDocument(void* c_this);
	[LinkName("QVariant_ToModelIndex")]
	public static extern void QVariant_ToModelIndex(void* c_this);
	[LinkName("QVariant_ToPersistentModelIndex")]
	public static extern void QVariant_ToPersistentModelIndex(void* c_this);
	[LinkName("QVariant_Load")]
	public static extern void QVariant_Load(void* c_this, void* ds);
	[LinkName("QVariant_Save")]
	public static extern void QVariant_Save(void* c_this, void* ds);
	[LinkName("QVariant_Type")]
	public static extern int64 QVariant_Type(void* c_this);
	[LinkName("QVariant_TypeToName")]
	public static extern char8* QVariant_TypeToName(int32 typeId);
	[LinkName("QVariant_NameToType")]
	public static extern int64 QVariant_NameToType(char8* name);
	[LinkName("QVariant_Data")]
	public static extern void* QVariant_Data(void* c_this);
	[LinkName("QVariant_ConstData")]
	public static extern void* QVariant_ConstData(void* c_this);
	[LinkName("QVariant_Data2")]
	public static extern void* QVariant_Data2(void* c_this);
	[LinkName("QVariant_SetValue")]
	public static extern void QVariant_SetValue(void* c_this, void* avalue);
	[LinkName("QVariant_Compare")]
	public static extern void QVariant_Compare(void* lhs, void* rhs);
	[LinkName("QVariant_ToInt1")]
	public static extern int32 QVariant_ToInt1(void* c_this, bool* ok);
	[LinkName("QVariant_ToUInt1")]
	public static extern uint32 QVariant_ToUInt1(void* c_this, bool* ok);
	[LinkName("QVariant_ToLongLong1")]
	public static extern int64 QVariant_ToLongLong1(void* c_this, bool* ok);
	[LinkName("QVariant_ToULongLong1")]
	public static extern uint64 QVariant_ToULongLong1(void* c_this, bool* ok);
	[LinkName("QVariant_ToDouble1")]
	public static extern double QVariant_ToDouble1(void* c_this, bool* ok);
	[LinkName("QVariant_ToFloat1")]
	public static extern float QVariant_ToFloat1(void* c_this, bool* ok);
	[LinkName("QVariant_ToReal1")]
	public static extern double QVariant_ToReal1(void* c_this, bool* ok);
	/// Delete this object from C++ memory
	[LinkName("QVariant_Delete")]
	public static extern void QVariant_Delete(void* self);
}
public interface IQVariantConstPointer
{
	void* NativePtr { get; }
}
public class QVariantConstPointer : IQVariantConstPointer
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this(IQVariant variant)
	{
		this.nativePtr = CQt.QVariantConstPointer_new((variant == default) ? default : (void)variant.NativePtr);
	}
	
	public ~this()
	{
		CQt.QVariantConstPointer_Delete(this.nativePtr);
	}
	
	public void OperatorMultiply()
	{
		CQt.QVariantConstPointer_OperatorMultiply(this.nativePtr);
	}
	
	public void* OperatorMinusGreater()
	{
		return CQt.QVariantConstPointer_OperatorMinusGreater(this.nativePtr);
	}
	
	public void OperatorAssign(IQVariantConstPointer param1)
	{
		CQt.QVariantConstPointer_OperatorAssign(this.nativePtr, (param1 == default) ? default : (void*)param1.NativePtr);
	}
	
}
